# TutCatalogPy2

./: .flake8  .gitignore  README.md  pyproject.toml  pytest.ini  setup-catalog.py  setup-viewer.py
docs/: development_notes.md
examples/: catalog-dev-big.yml  catalog-dev.yml  catalog-duplicates.yml  catalog-full.yml  catalog-local.yml  info.tc
examples/linux/: catalog-almost-full.yml  catalog-dev-big.yml  catalog-dev.yml  infoviewer.desktop  tutcatalogpy2.desktop  user-extension-tc.xml
examples/macos/: catalog-almost-full.yml  catalog-dev-big.yml  catalog-dev.yml  catalog-full.yml
src/tutcatalogpy/catalog/: .gitignore  config.py  main.py  scan_config.py  scan_controller.py  scan_worker.py
src/tutcatalogpy/catalog/db/: author.py  cover.py  dal.py  disk.py  extra_tag.py  folder.py  learning_path.py  publisher.py  tag.py  tutorial.py  tutorial_learning_path.py
src/tutcatalogpy/catalog/models/: disks_model.py  tags_model.py  tutorials_model.py
src/tutcatalogpy/catalog/widgets/: cover_dock.py  disks_dock.py  main_window.py  scan_config_dock.py  scan_dialog.py  search_dock.py  tags_dock.py  tutorials_dock.py
src/tutcatalogpy/common/: desktop_services.py  files.py  labeled_enum.py  logging_config.py  logging_handler.py  recent_files.py  scan_config.py  scan_worker.py  settings.py  table_column_enum.py  tutorial_data.py
src/tutcatalogpy/common/db/: author.py  base.py  cover.py  dal.py  disk.py  folder.py  image.py  learning_path.py  publisher.py  search_flag.py  search_flags.py  tag.py  tutorial.py  tutorial_learning_path.py
src/tutcatalogpy/scrapper/: README.md  basic.py  domestika.py  get_linux_chromedriver.fish  get_linux_geckodriver.fish  gumroad.py  main.py  newmastersacademy.py  udemy.py
src/tutcatalogpy/viewer/: .gitignore  main.py
tests/: test_tutcatalogpy.py  test_tutcatalogpy2.py
tests/catalog/: test_config.py  test_scan_worker.py  test_scan_worker_scan_disks.py  test_scan_worker_scan_folders.py
tests/catalog/db/: test_tutorial.py  test_tutorial_author.py
tests/common/: test_files.py  test_scan_worker_update_folder_tutorial.py  test_tutorial_data.py
tests/common/db/: test_folder.py  test_tutorial.py
tests/common/scan_worker/: test_scan_disks.py  test_update_folder_tutorial.py
tests/common/tutorial_data/: test_authors.py  test_complete_online_todo.py  test_publisher.py  test_rating.py  test_tags.py  test_tutorial_data_authors.py  test_tutorial_data_duration.py  test_tutorial_data_learning_paths.py  test_tutorial_data_level.py  test_tutorial_data_progress.py  test_tutorial_data_released.py  test_tutorial_data_title.py
(+33 files in other folders)
