[tool.poetry]
name = "tutcatalogpy2"
version = "0.1.0"
description = ""
authors = ["Ioan Calin <iborco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b2"
flake8-blind-except = "^0.2.0"
flake8-bugbear = "^21.4.3"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.5.0"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.0.0"
flake8-mypy = "^17.8.0"
flake8-quotes = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
