[tool.poetry.scripts]
tutcatalogpy = 'tutcatalogpy.catalog.main:run'

[tool.poetry]
name = "tutcatalogpy"
version = "0.1.0"
description = ""
authors = ["Ioan Calin <iborco@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
PySide2 = "^5.15.2"
pyobjc-framework-Cocoa = "^7.2"
"ruamel.yaml" = "^0.17.7"
SQLAlchemy = "^1.4.17"
py2app = "^0.24"
humanize = "^3.6.0"
Markdown = "^3.3.4"
natsort = "^7.1.1"
pymediainfo = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b2"
flake8-blind-except = "^0.2.0"
flake8-bugbear = "^21.4.3"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.5.0"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.0.0"
flake8-mypy = "^17.8.0"
flake8-quotes = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
